--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -13,10 +13,12 @@
     "@expo/ngrok": "^4.1.3",
     "@gorhom/bottom-sheet": "^5.1.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/stack": "^7.3.2",
     "expo": "~53.0.9",
+    "expo-dev-client": "~5.1.8",
     "expo-font": "^13.3.1",
     "expo-linear-gradient": "~14.1.4",
     "expo-status-bar": "~2.2.3",
@@ -24,6 +26,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-bottom-sheet": "^1.0.3",
+    "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "5.4.0",
@@ -34,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0",
     "react-native-svg-transformer": "^1.5.1"
   },
   "private": true
